--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="background-color: hsl(281, 46%, 14%);">
+<html>
 <head>
       <!-- general -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.25, maximum-scale=5.0"/>
@@ -11,15 +11,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Eczar:wght@400..800&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Grenze+Gotisch:wght@100..900&family=Platypi:ital,wght@0,300..800;1,300..800&family=Texturina:ital,opsz,wght@0,12..72,100..900;1,12..72,100..900&display=swap" rel="stylesheet">
       <!-- stylesheet -->
-    <link rel="stylesheet/less" type="text/css" href="/less/style.less">
-      <!-- LESS.js: lesscss.org -->
-    <script src="/framework/less.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
       <!-- ICONS: phosphoricons.com -->
       <link rel="stylesheet" type="text/css"
       href="https://unpkg.com/@phosphor-icons/web@2.1.1/src/duotone/style.css"/>
 </head>
 
 <body>
+  <script>
+    document.body.className
+  </script>
   <header>
     <section class="site navbar toggle">
       <button onclick="navSmallS()" id="btn-small-s">
@@ -122,7 +123,7 @@
       <section>
         <div>
           <h2>
-            <span tooltip="Introduction" tooltip-position="bottom">
+            <span tooltip="Introduction" tooltip-position="top">
               Introduction
             </span>
           </h2>
