--- a/tma/cast/institute.html
+++ b/tma/cast/institute.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="background-color: hsl(281, 46%, 14%);">
+<html>
 <head>
       <!-- general -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.25, maximum-scale=5.0"/>
@@ -11,9 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Eczar:wght@400..800&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Grenze+Gotisch:wght@100..900&family=Platypi:ital,wght@0,300..800;1,300..800&family=Texturina:ital,opsz,wght@0,12..72,100..900;1,12..72,100..900&display=swap" rel="stylesheet">
       <!-- stylesheet -->
-    <link rel="stylesheet/less" type="text/css" href="/less/style.less">
-      <!-- LESS.js: lesscss.org -->
-    <script src="/framework/less.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
       <!-- ICONS: phosphoricons.com -->
       <link rel="stylesheet" type="text/css"
       href="https://unpkg.com/@phosphor-icons/web@2.1.1/src/duotone/style.css"/>
@@ -98,6 +96,78 @@
     <div class="modal">
       <span class="h3"><h3>Jonah Magnus</h3></span>
         <button class="close-modal" aria-label="Close modal" onclick="magnusClose()">
+          <i class="ph-duotone ph-cpu"></i>
+        </button>
+    </div>
+  </dialog>
+  <dialog id="DaisyTonner">
+    <div class="modal">
+      <span class="h3"><h3>Alice <span class="nickname">Daisy</span> Tonner</h3></span>
+        <button class="close-modal" aria-label="Close modal" onclick="daisyClose()">
+          <i class="ph-duotone ph-cpu"></i>
+        </button>
+    </div>
+  </dialog>
+  <dialog id="BasiraHussain">
+    <div class="modal">
+      <span class="h3"><h3>Basira Hussain</h3></span>
+        <button class="close-modal" aria-label="Close modal" onclick="basiraClose()">
+          <i class="ph-duotone ph-cpu"></i>
+        </button>
+    </div>
+  </dialog>
+  <dialog id="RosieZampano">
+    <div class="modal">
+      <span class="h3"><h3>Rosie Zampano</h3></span>
+        <button class="close-modal" aria-label="Close modal" onclick="rosieClose()">
+          <i class="ph-duotone ph-cpu"></i>
+        </button>
+    </div>
+  </dialog>
+  <dialog id="TimothyStoker">
+    <div class="modal">
+      <span class="h3"><h3>Timothy <span class="nickname">Tim</span> Stoker</h3></span>
+        <button class="close-modal" aria-label="Close modal" onclick="timClose()">
+          <i class="ph-duotone ph-cpu"></i>
+        </button>
+    </div>
+  </dialog>
+  <dialog id="SashaJames">
+    <div class="modal">
+      <span class="h3"><h3>Sasha James</h3></span>
+        <button class="close-modal" aria-label="Close modal" onclick="sashaClose()">
+          <i class="ph-duotone ph-cpu"></i>
+        </button>
+    </div>
+  </dialog>
+  <dialog id="GertrudeRobinson">
+    <div class="modal">
+      <span class="h3"><h3>Gertrude Robinson</h3></span>
+        <button class="close-modal" aria-label="Close modal" onclick="gertrudeClose()">
+          <i class="ph-duotone ph-cpu"></i>
+        </button>
+    </div>
+  </dialog>
+  <dialog id="MichaelShelley">
+    <div class="modal">
+      <span class="h3"><h3>Michael Shelley</h3></span>
+        <button class="close-modal" aria-label="Close modal" onclick="shelleyClose()">
+          <i class="ph-duotone ph-cpu"></i>
+        </button>
+    </div>
+  </dialog>
+  <dialog id="MelanieKing">
+    <div class="modal">
+      <span class="h3"><h3>Melanie King</h3></span>
+        <button class="close-modal" aria-label="Close modal" onclick="melanieClose()">
+          <i class="ph-duotone ph-cpu"></i>
+        </button>
+    </div>
+  </dialog>
+  <dialog id="EricDelano">
+    <div class="modal">
+      <span class="h3"><h3>Eric Delano</h3></span>
+        <button class="close-modal" aria-label="Close modal" onclick="delanoClose()">
           <i class="ph-duotone ph-cpu"></i>
         </button>
     </div>
@@ -264,6 +334,24 @@
             </div>
           </div>
         </div>
+        <div class="cardwrap">
+          <div class="cards">
+            <div class="cards-item">
+              <div class="card">
+                <button onclick="rosieShow()">
+                  <div class="card-content">
+                    <div class="card-text">
+                      <span class="names"><p class="name">Rosie Zampano</p></span>
+                      <p class="ds">Secratary<span class="hsh">&sect;</span>she/her</p>
+                        <hr>
+                      <p class="lm">learn more.</p>
+                    </div>
+                  </div>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
       <section>
         <div id="Major-Formers">
@@ -301,6 +389,24 @@
                   <div class="card-content">
                     <div class="card-text">
                       <span class="names"><p class="name">Sasha James</p></span>
+                      <p class="ds">Archival assistant<span class="hsh">&sect;</span>she/her</p>
+                        <hr>
+                      <p class="lm">learn more.</p>
+                    </div>
+                  </div>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="cardwrap">
+          <div class="cards">
+            <div class="cards-item">
+              <div class="card">
+                <button onclick="melanieShow()">
+                  <div class="card-content">
+                    <div class="card-text">
+                      <span class="names"><p class="name">Melanie King</p></span>
                       <p class="ds">Archival assistant<span class="hsh">&sect;</span>she/her</p>
                         <hr>
                       <p class="lm">learn more.</p>
