--- a/tma/index.html
+++ b/tma/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="background-color: hsl(281, 46%, 14%);">
+<html>
 <head>
       <!-- general -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.25, maximum-scale=5.0"/>
@@ -11,9 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Eczar:wght@400..800&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Grenze+Gotisch:wght@100..900&family=Platypi:ital,wght@0,300..800;1,300..800&family=Texturina:ital,opsz,wght@0,12..72,100..900;1,12..72,100..900&display=swap" rel="stylesheet">
       <!-- stylesheet -->
-    <link rel="stylesheet/less" type="text/css" href="/less/style.less">
-      <!-- LESS.js: lesscss.org -->
-    <script src="/framework/less.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
       <!-- ICONS: phosphoricons.com -->
       <link rel="stylesheet" type="text/css"
       href="https://unpkg.com/@phosphor-icons/web@2.1.1/src/duotone/style.css"/>
@@ -49,7 +47,7 @@
     <section>
       <h6>TMA</h6>
       <nav>
-          <div><a href="../season/" class="title">Seasons</a></div>
+          <div><a href="season/" class="title">Seasons</a></div>
           <div><a href="cast/" class="title">Characters</a></div>
           <div><a href="fears" class="subtitle">Entities</a></div>
       </nav>
@@ -97,7 +95,7 @@
         <section>
           <h6>TMA</h6>
           <nav>
-              <div><a href="../season/" class="title">Seasons</a></div>
+              <div><a href="season/" class="title">Seasons</a></div>
               <div><a href="cast/" class="title">Characters</a></div>
               <div><a href="fears" class="subtitle">Entities</a></div>
           </nav>
@@ -132,7 +130,7 @@
       <section>
         <div id="Statement">
           <h2>
-            <span tooltip="Introduction" tooltip-position="bottom">
+            <span tooltip="Introduction" tooltip-position="top">
               Introduction
             </span>
           </h2>
