--- a/tmagp/cast/oiar.html
+++ b/tmagp/cast/oiar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="background-color: hsl(281, 46%, 14%);">
+<html>
 <head>
       <!-- general -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.25, maximum-scale=5.0"/>
@@ -7,13 +7,11 @@
     <title>office of incident assessment & response staff</title>
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
       <!-- stylesheet -->
-    <link rel="stylesheet/less" type="text/css" href="/less/style.less">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
       <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Eczar:wght@400..800&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Grenze+Gotisch:wght@100..900&family=Platypi:ital,wght@0,300..800;1,300..800&family=Texturina:ital,opsz,wght@0,12..72,100..900;1,12..72,100..900&display=swap" rel="stylesheet">
-      <!-- LESS.js: lesscss.org -->
-    <script src="/framework/less.min.js" type="text/javascript"></script>
       <!-- ICONS: phosphoricons.com -->
       <link rel="stylesheet" type="text/css"
       href="https://unpkg.com/@phosphor-icons/web@2.1.1/src/duotone/style.css"/>
@@ -244,7 +242,12 @@
       </section>
       <section>
         <div id="Current">
-          <h2>Current Staff</h2>
+          <h2>
+            <span tooltip="Current Staff"
+                  tooltip-position="top">
+              Current Staff
+            </span>
+          </h2>
         </div>
       </section>
       <section class="cardsel">
@@ -359,7 +362,12 @@
       </section>
       <section>
         <div id="Externals">
-          <h2>Externals</h2>
+          <h2>
+            <span tooltip="Externals"
+              tooltip-position="top">
+              Externals
+            </span>
+          </h2>
         </div>
       </section>
       <section class="cardsel">
@@ -402,7 +410,12 @@
       </section>
       <section>
         <div id="Former">
-          <h2>Former Staff</h2>
+          <h2>
+            <span tooltip="Former Staff"
+                  tooltip-position="top">
+              Former Staff
+            </span>
+          </h2>
         </div>
       </section>
       <section class="cardsel">
@@ -445,7 +458,12 @@
       </section>
       <section>
         <div id="Algorithms">
-          <h2>Algorithm</h2>
+          <h2>
+            <span tooltip="Algorithms"
+                tooltip-position="top">
+              Algorithms
+            </span>
+          </h2>
         </div>
       </section>
       <section class="cardsel">
